# textura

./: Cargo.toml  README.md  output.txt  shell.nix
ascii/: cat.txt  ferris.txt  me.txt  output.txt
src/: lib.rs  main.rs
