[package]
name = "textura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.26.1"
image = "0.24.6"
# nokhwa = { version = "0.10.3", features = ["input-v4l"]}
ratatui = "0.29.0"
